# Inform

./: .gitignore  .gitmodules  COPYING  README.md  README.txt  configure.py
zoom/: .gitignore  AUTHORS  ChangeLog  Glulxe-Info.plist  Info-ZoomView__Upgraded_.plist  Info-Zoom__Upgraded_.plist  LeopardExtns-Info.plist  Makefile.am  NEWS  README  THANKS  TODO  Zoom-todo.oo3  ZoomMetadataImporter-Info.plist  ZoomPlugIns-Info.plist  ZoomSaveQuickLook-Info.plist  acconfig.h  acinclude.m4  config.h.in  configure.in
zoom/ProjectBuilder/: build_files.sh  config.h
zoom/ProjectBuilder/etc/: ztypes.h
zoom/ZoomCocoa.xcodeproj/: project.pbxproj
zoom/ZoomCocoa.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
zoom/ZoomCocoa.xcodeproj/xcshareddata/xcschemes/: Zoom.xcscheme  ZoomServer.xcscheme  geas.xcscheme
zoom/blorb/: Makefile.am
zoom/blorb/libblorb/: blorb.h  blorbint.h  makeblorb.c
zoom/bonus/: Makefile.am  math.h  misc.h  random.inf  spec11.h  v6tests.h  zmark.inf  ztest.inf
zoom/bonus/docs/: IF_XML_metadata.tex  IF_metadata-TODO.ooutline  bleh.sty
zoom/builder/: Makefile.am  gram.y  lex.l  main.c  operation.h  varopdecode.pl
zoom/depends/: README
zoom/depends/CocoaGlk/: COPYING  CocoaGlk_Prefix.pch  GlkClient-Info.plist  GlkSound-Info.plist  GlkView-Info.plist  Info.plist  git
zoom/depends/CocoaGlk/CocoaGlk.xcodeproj/: project.pbxproj
zoom/depends/CocoaGlk/English.lproj/: InfoPlist.strings
zoom/depends/CocoaGlk/GlkApplication/: GlkAppDelegate.h  GlkAppDelegate.m  GlkWindowController.h  GlkWindowController.m  main.m
zoom/depends/CocoaGlk/GlkClient/: GlkBufferedStream.h  GlkBufferedStream.m  GlkClient.modulemap  GlkMemoryFileRef.h  GlkMemoryFileRef.m  GlkMemoryStream.h  GlkMemoryStream.m  GlkUcs4Stream.h  GlkUcs4Stream.m  cocoaglk.h  gi_blorb.m  gi_dispa.h  gi_dispa.m  glk.h  glk_client.h  glk_cocoa.m  glk_datetime.m  glk_events.m  glk_files.m  glk_hyperlink.m  glk_image.m  glk_main.m  glk_misc.m  glk_sound.m  glk_stream.m  glk_style.m  glk_unicode.m  glk_windows.m
zoom/depends/CocoaGlk/GlkSound/: GlkSound.modulemap  GlkSoundDataSource.h
zoom/depends/CocoaGlk/GlkTest/: glkmain.m  imagetest.m  multiwin.c
zoom/depends/CocoaGlk/GlkView/: GlkArrangeEvent.h  GlkArrangeEvent.m  GlkAutomation.h  GlkClearMargins.h  GlkClearMargins.m  GlkCustomTextSection.h  GlkCustomTextSection.m  GlkEvent.h  GlkEvent.m  GlkFileRef.h  GlkFileRef.m  GlkFileStream.h  GlkFileStream.m  GlkGraphicsWindow.h  GlkGraphicsWindow.m  GlkGridTypesetter.h  GlkGridTypesetter.m  GlkHub.h  GlkHub.m  GlkImage.h  GlkImage.m  GlkMoreView.h  GlkMoreView.m  GlkPairWindow.h  GlkPairWindow.m  GlkPreferences.h  GlkPreferences.m  GlkStyle.h  GlkStyle.m  GlkTextGridWindow.h  GlkTextGridWindow.m  GlkTextView.h  GlkTextView.m  GlkTextWindow.h  GlkTextWindow.m  GlkTypesetter.h  GlkTypesetter.m  GlkView.h  GlkView.m  GlkView.modulemap  (+4 more)
zoom/depends/CocoaGlk/Protocol/: GlkBuffer.h  GlkBuffer.m  GlkEventListenerProtocol.h  GlkEventProtocol.h  GlkFilePromptProtocol.h  GlkFileRefProtocol.h  GlkHubProtocol.h  GlkImageSourceProtocol.h  GlkSessionProtocol.h  GlkStreamProtocol.h
zoom/depends/CocoaGlk/Resources/: CocoaGlk.icns
zoom/depends/CocoaGlk/SoundCodecs/: modplug
zoom/depends/CocoaGlk/SwiftGlk/: AppDelegate.swift  Info.plist  SwiftWindowController.swift
zoom/depends/CocoaGlk/en-GB.lproj/: CocoaGlk.xib  InfoPlist.strings
zoom/depends/CocoaGlk/en.lproj/: MainMenu.xib
zoom/depends/CocoaGlk/git-1.2.2/: cocoastart.m
zoom/depends/CocoaGlk/git-1.2.9/: README.txt  compiler.c  git.h  glkop.c  savefile.c  saveundo.c  terp.c  version.h
zoom/depends/CocoaGlk/git-1.3.4/: cocoastart.m  compiler.c  config.h  savefile.c  saveundo.c  terp.c
zoom/depends/CocoaGlk/git-1.3.5/: cocoastart.m
zoom/depends/CocoaGlk/glkmain/: main.m
zoom/depends/CocoaGlk/glulxe/: README  cocoastart.m  glkop.c  osdepend.c
zoom/depends/agil111src_glk/: config.h  os_glk.c  runverb.c  util.c
zoom/depends/babel/: .gitattributes  babel.c  babel_handler.c  babel_multi_functions.c  babel_story_functions.c  tads.c  tads.h  treaty_builder.h
zoom/depends/babel/extras/: babel-cache.pl  babel-infocom.pl  babel-marry.pl  babel-wed.pl
zoom/depends/geas/: Makefile
zoom/depends/geas/doc/: CONTACT.txt  CREDITS  INSTALL-OSX-GLK.txt  INSTALL-OSX-GTK.txt  (+1 more)
zoom/depends/scare/: os_glk.c  scprops.c
zoom/distribution/: GenericMountPoint.tiff  Imagebackground.ai  Zoom-diskImage.ai  Zoom-diskImage.icns
zoom/distribution/Zoom Distribution.fsproj/: project.plist
zoom/m4/: Makefile.am  carbon.m4  cocoa.m4  display.m4  util.m4
zoom/manual/: Makefile.am  configXwin.html  configmac.html  debug.html  idx  index.html  intro.html  style.css  troubleshooting.html  zoom.html  ztitle.html
zoom/src/: Makefile.am  archive.iFiction  blorb.c  blorb.h  carbondisplay.c  carbondisplay.h  carbonfont.c  carbonprefs.c  carbonsupport.c  debug.c  debug.h  display.c  display.h  eval.y  file.c  file.h  font3.c  font3.h  format.c  format.h  hash.c  hash.h  iff.c  ifmbtest.c  ifmetabase-internal.h  ifmetabase.c  ifmetabase.h  ifmetadata.c  ifmetadata.h  ifmetaxml.c  ifmetaxml.h  image.h  image_carbon.c  image_libpng.c  image_none.c  image_ximage.c  image_ximage.h  infocom.iFiction  interp.c  interp.h  (+37 more)
zoom/src/macos/: Info.plist  PkgInfo  macreadme.rtf  zoom-app.icns  zoom-file.icns  zoom-game.icns  zoomrc
zoom/src/zoomCocoa/: Blorb.icns  ClearView.swift  FadeView.swift  GlkClient.icns  HQImageView.swift  HUGO.icns  PluginManager.xib  TADS.icns  WhiteView.swift  Z6Display.m  ZDisplay.m  ZFiles.m  Zoom-Bridging-Header.h  ZoomAppDelegate.h  ZoomAppDelegate.m  ZoomClearView.h  ZoomClearView.m  ZoomClient.h  ZoomClient.m  ZoomClient.xib  ZoomClientController.h  ZoomClientController.m  ZoomCollapsableView.h  ZoomCollapsableView.m  ZoomCollapsableView.swift  ZoomCollapsingSplitView.h  ZoomCollapsingSplitView.m  ZoomConnector.h  ZoomConnector.m  ZoomCursor.h  ZoomCursor.m  ZoomDownloadView.h  ZoomDownloadView.m  ZoomDownloadView.swift  ZoomFadeView.h  ZoomFadeView.m  ZoomFlipView.h  ZoomFlipView.m  ZoomGameInfoController.h  ZoomGameInfoController.m  (+74 more)
(+2191 files in other folders)
