SUBDIRS = m4 builder src bonus manual

EXTRA_DIST = THANKS ProjectBuilder/config.h ProjectBuilder/etc/ztypes.h \
	ProjectBuilder/build_files.sh \
	ZoomCocoa.xcodeproj/project.pbxproj \
	Info-ZoomView__Upgraded_.plist \
	Info-Zoom__Upgraded_.plist \
	ZoomMetadataImporter-Info.plist \
	ZoomPlugIns-Info.plist \
	Glulxe-Info.plist \
	LeopardExtns-Info.plist \
	depends/README \
	ZoomSaveQuickLook-Info.plist
